--- a/Lessons/M3_TrendSeasonality.Rmd
+++ b/Lessons/M3_TrendSeasonality.Rmd
@@ -2,6 +2,8 @@
 title: "M3: Class Exercise on Trend and Season"
 author: "Luana Lima"
 output: pdf_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ## Setting R code chunk options
@@ -22,7 +24,7 @@ library(ggplot2)
 library(forecast)
 library(Kendall)
 library(tseries)
-
+library(tidyverse)
 ```
 
 ## Importing data
@@ -32,7 +34,8 @@ Let's continue working with our inflow data for reservoirs in Brazil.
 ```{r}
 
 #Importing time series data from text file#
-raw_inflow_data <- read.table(file="../Data/inflowtimeseries.txt",header=FALSE,skip=0)
+here()
+raw_inflow_data <- read.table(file="Data/inflowtimeseries.txt",header=FALSE,skip=0)
 
 #Trim the table to include only columns you need
 nhydro <- ncol(raw_inflow_data)-2
@@ -109,7 +112,8 @@ Fixed!
 Many of the functions we will use require a time series object. You can transform your data in a time series using the function *ts()*. 
 
 ```{r}
-ts_inflow_data <- ts(inflow_data[,2:(2+nhydro-1)],frequency=12) 
+#add start and fix dates?
+ts_inflow_data <- ts(inflow_data[,2:(2+nhydro-1)],frequency=12, start = c(1931,1)) 
 #note that we are only transforming columns with inflow data, not the date columns  #start=my_date[1],end=my_date[nobs],
 head(ts_inflow_data,15)
 ```
@@ -136,12 +140,27 @@ for(i in 1:nhydro){
 Let's identify and remove trend component. You start by fitting a linear model to $Y_t=\beta_0+\beta_1*t+\epsilon_t$. 
 
 ```{r}
+iHP <- 12
 #Create vector t
-
+t <- 1:nobs
 
 
 #Fit a linear trend to TS of iHP
+linear_model_trend <- lm(inflow_data[,iHP+1]~t)
+summary(linear_model_trend)
 
+beta0 <- as.numeric(linear_model_trend$coefficients[1])
+beta1 <- as.numeric(linear_model_trend$coefficients[2])
+
+#detrended inflow
+
+linear_trend <- beta0 + beta1  * t
+detrended_inflow <- inflow_data[,iHP+1] - linear_trend
+ts_detrend <- ts(detrended_inflow, start = c(1931,1), frequency = 12)
+
+#plot
+autoplot(ts_inflow_data[,iHP], color = "darkblue") + 
+  autolayer(ts_detrend, series = "Detrended")
 
 ```
 
@@ -162,7 +181,9 @@ Now let's shift attention to the seasonal component.
 
 ```{r}
 #Use seasonal means model
-
+dummies <- seasonaldummy(ts_detrend)
+seasonal_lm <- lm(detrended_inflow ~ dummies)
+summary(seasonal_lm)
 
 ```
 
