--- a/Lessons/M4_MissingDataAndOutliers_Example2.Rmd
+++ b/Lessons/M4_MissingDataAndOutliers_Example2.Rmd
@@ -52,10 +52,10 @@ wind_data$DATE <- ym(wind_data$DATE)
 Many of the functions we will use require a time series object. You can transform your data in a time series using the function *ts()*. 
 
 ```{r}
-ts_wind_data <- ts(wind_data$AWND.1,frequency=12) 
+ts_wind_data <- ts(wind_data$AWND.1,frequency=12, start = c(1984,1)) 
 
 autoplot(ts_wind_data) +
-  ylab("Average Wind Speed") 
+  ylab("Average Wind Speed") + theme_classic()
 ```
 
 
@@ -64,7 +64,7 @@ autoplot(ts_wind_data) +
 tsclean() from package 'forecast' identify and replace outliers and missing values in a time series using linear interpolation. This should be used with some caution!!
 
 ```{r}
-
+#uses linear interpolation (average of before and after)
 clean_wind_data <- tsclean(ts_wind_data)  #object should be a time series
 
 autoplot(clean_wind_data, series="Wind Clean") +
@@ -81,6 +81,16 @@ If you want to handle missing data, but do not want to remove outliers, here are
 `forecast::na.interp()`
 `zoo::na.approx()`
 
+```{r}
+library(zoo)
+clean_wind_data_approx <- na.approx(ts_wind_data)
+
+
+autoplot(clean_wind_data, series="Wind Clean") +
+  autolayer(clean_wind_data_approx, series="Wind na.approx") +
+  ylab("Average Wind Speed") 
+
+```
 
 
 
